CSS selectors and layouts exercises

--- a/m3-w7d2-css-selectors/src/main/webapp/fun-with-blocks-in-a-row.css
+++ b/m3-w7d2-css-selectors/src/main/webapp/fun-with-blocks-in-a-row.css
@@ -7,6 +7,10 @@ html {
 	width: 50px;
 	height: 50px;
 	padding: 20px;
+	display: inline-block;
+	text-align: center;
+	float: left;
+	font-size: 175%;
 }
 
 .odd {
