--- a/m3-w7d4-mvc-views-part-2/src/main/webapp/css/site.css
+++ b/m3-w7d4-mvc-views-part-2/src/main/webapp/css/site.css
@@ -45,6 +45,10 @@ nav li a:hover {
 	text-decoration: underline;
 }
 
+nav li a.selected {
+	color: #000;
+}
+
 section {
 	clear: both;
 	display: block;
@@ -55,4 +59,121 @@ section {
 	min-height: 450px;
 	background-color: #FFF;
 	border-radius: 7px;
+}
+
+.rating {
+	width: 90px;
+	height: 20px;
+}
+
+.toy_description {
+	height: 180px;
+}
+
+.toy_image_list img {
+	height: 20%;
+	width: 20%;
+	float: left;
+}
+
+.toy_image_description {
+	display: inline-flex;
+}
+
+.ratingRow {
+	width: 90px;
+	height: 20px;
+}
+
+.row_image {
+	height: 20%;
+	width: 20%;
+}
+
+th {
+	font-size: 70%;
+	text-align: left;
+}
+
+#best_seller_row {
+	font-size: 70%;
+	color: red;
+}
+
+#name_row {
+	background-color: #cccccc;
+	font-size: 70%;
+}
+
+#manufacturer_row {
+	background-color: #cccccc;
+	font-size: 70%;
+}
+
+#weight_row {
+	background-color: #cccccc;
+	font-size: 70%;
+}
+
+#price_row {
+	color: red;
+}
+
+#top_title_table{
+	font-size: 160%;
+}
+
+
+
+
+#top_title_tile{
+	font-size: 160%;
+}
+
+.tiles_best_seller{
+	font-size: 70%;
+}
+
+.tiles_image {
+	height: 50%;
+	width: 50%;
+}
+
+.tiles_price {
+	padding-top: .2cm;
+	color:red;
+	font-size:70%;
+}
+
+.tiles_manufacturer{
+	font-size: 55%;
+}
+.tiles_weight{
+	font-size: 65%;
+}
+
+#tiles_rating{
+	align:center;
+	size:20%;
+	
+}
+#container {
+width: 100%;
+margin: 2em auto;
+}
+
+.columns {
+-moz-column-count:3;
+-moz-column-gap: 3%;
+-moz-column-width: 30%;
+-webkit-column-count:3;
+-webkit-column-gap: 3%;
+-webkit-column-width: 30%;
+column-count: 3;
+column-gap: 3%;
+column-width: 30%;
+}
+
+.box {
+margin-bottom: 20px;
 }
