Product exercise working, still needs some CSS

--- a/m3-w7d4-mvc-views-part-2/src/main/webapp/css/site.css
+++ b/m3-w7d4-mvc-views-part-2/src/main/webapp/css/site.css
@@ -177,3 +177,14 @@ column-width: 30%;
 .box {
 margin-bottom: 20px;
 }
+
+.toy_image_detail{
+	size: 80%;
+	webkit:box;
+	display:block;
+	float:left;
+}
+
+.toy_info_detail{
+	display:block;
+}
